--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
         "jsx": "react",
-        "module": "ES6",
-        "target": "ES6",
+        "module": "es6",
+        "target": "es6",
         "moduleResolution": "node",
-        "esModuleInterop": true,
+        "esModuleInterop": true
     },
     "include": ["src/**/*.ts", "src/**/*.tsx"],
     "exclude": ["node_modules"]
