--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "pdfjs-dist": "^4.1.392",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5"
