--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "watch": "webpack --watch --progress --config webpack.config.js"
   },
   "dependencies": {
+    "@types/marked": "^6.0.0",
     "cheerio": "^1.0.0-rc.12",
+    "dompurify": "^3.1.2",
+    "highlight.js": "^11.9.0",
     "lunr": "^2.3.9",
     "mammoth": "^1.7.2",
+    "marked": "^12.0.2",
     "pdfjs-dist": "^4.1.392",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
