--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "watch": "webpack --watch --progress --config webpack.config.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.17",
     "@types/marked": "^6.0.0",
     "cheerio": "^1.0.0-rc.12",
     "dompurify": "^3.1.2",
